fin ajout contenu

--- a/activites_optionnelles.html
+++ b/activites_optionnelles.html
@@ -42,7 +42,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg" alt="Logo CC2972"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg"
+                        alt="Logo CC2972"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -50,7 +51,8 @@
                     <li><a href="documents/messages.pdf" target="_blank">Messages de la semaine</a></li>
                     <li><a href="inscriptions.html">Inscriptions</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li class="active"><a href="activites_optionnelles.html">Activités optionnelles</a></li>
                             <li><a href="instruction_ete.html">Instruction d'été</a></li>
@@ -60,7 +62,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="references_instructeurs.html">Instructeurs</a></li>
                             <li><a href="references_cadets.html">Cadets</a></li>
@@ -71,7 +74,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="historique.html">Notre histoire</a></li>
                             <li><a href="distinctions.html">Distinctions</a></li>
@@ -94,12 +98,13 @@
             </div>
         </div>
     </div>
-    
+
     <div class="section">
         <div class="container">
             <div class="row">
                 <div class="col-sm-8">
-                    <p class="lead">En plus des cours du programme de l'étoile, le corps de cadets offre diverses activités complémentaires qui viennent enrichir l'expérience des cadets.</p>
+                    <p class="lead">En plus des cours du programme de l'étoile, le corps de cadets offre diverses
+                        activités complémentaires qui viennent enrichir l'expérience des cadets.</p>
                 </div>
             </div>
         </div>
@@ -110,16 +115,29 @@
             <div class="row">
                 <div class="col-sm-6 featured-news">
                     <h2>Sports</h2>
-                    <p>Le corps de cadets offre des activités de sport dans le but de promouvoir la bonne forme physique. Les sports aident aussi à améliorer la confiance et l'estiment de soi, tout en fournissant une activité passionnante et amusante 
-                    pour le cadet.<br>Nous avons des équipes de volleyball, basketball, kinball, badmington et improvisation et le corps de cadets participe à des compétitions sportives entre corps de cadets de la région. Cette compétition est connue 
-                    sous le nom de Jeux des cadets et a lieu vers la fin du mois de janvier tous les ans.<br>De plus à au moins deux reprises par année, les cadets participent au test de la norme d'évaluation de la condition physique des cadets qui 
-                    évalue la condition physique des cadets sur 3 aspects : l'endurance cardiovasculaire, la force musculaire et la souplesse musculaire. 4 niveaux sont attribués à la suite de l'évaluation : Bronze, Argent, Or et Excellence.</p>
+                    <p>Le corps de cadets offre des activités de sport dans le but de promouvoir la bonne forme
+                        physique. Les sports aident aussi à améliorer la confiance et l'estiment de soi, tout en
+                        fournissant une activité passionnante et amusante
+                        pour le cadet.<br>Nous avons des équipes de volleyball, basketball, kinball, badmington et
+                        improvisation et le corps de cadets participe à des compétitions sportives entre corps de cadets
+                        de la région. Cette compétition est connue
+                        sous le nom de Jeux des cadets et a lieu vers la fin du mois de janvier tous les ans.<br>De plus
+                        à au moins deux reprises par année, les cadets participent au test de la norme d'évaluation de
+                        la condition physique des cadets qui
+                        évalue la condition physique des cadets sur 3 aspects : l'endurance cardiovasculaire, la force
+                        musculaire et la souplesse musculaire. 4 niveaux sont attribués à la suite de l'évaluation :
+                        Bronze, Argent, Or et Excellence.</p>
                 </div>
                 <div class="col-sm-6 latest-news">
                     <h2>Tir Récréatif</h2>
-                    <p>Les cadets apprennent les rudiments du tir de précision à la carabine au travers du programme de l'étoile. De plus, ils doivent faire au moins une fois par année du tir de qualification lors des journées de tir organisées par 
-                    le corps de cadets.<br>Il y a 4 niveaux de qualification de tir dans les cadets de l'armée. Pour les tirs de qualification, les cadets doivent tirer deux fois 5 plombs et les regrouper le plus possible.<br>Parmi les cadets qui 
-                    se sont qualifiés, nous sélectionnons une équipe de tir qui représentera le corps de cadets lors des compétitions régionales et possiblement provinciales ou nationales.</p>
+                    <p>Les cadets apprennent les rudiments du tir de précision à la carabine au travers du programme de
+                        l'étoile. De plus, ils doivent faire au moins une fois par année du tir de qualification lors
+                        des journées de tir organisées par
+                        le corps de cadets.<br>Il y a 4 niveaux de qualification de tir dans les cadets de l'armée. Pour
+                        les tirs de qualification, les cadets doivent tirer deux fois 5 plombs et les regrouper le plus
+                        possible.<br>Parmi les cadets qui
+                        se sont qualifiés, nous sélectionnons une équipe de tir qui représentera le corps de cadets lors
+                        des compétitions régionales et possiblement provinciales ou nationales.</p>
                 </div>
             </div>
         </div>
@@ -130,13 +148,19 @@
             <div class="row">
                 <div class="col-sm-6 featured-news">
                     <h2>Peloton de Précison</h2>
-                    <p>Le peloton de précision s'adresse principalement à ceux qui aiment les chorégraphies, qui ont une bonne mémoire et qui ont une très bonne discipline. Le peloton de précision est un exercice de marche militaire où les rotations, 
-                        contre-marche et changement de formation se joignent à l'alignement, la discipline, aux gestes vifs et mouvements secs pour faire une chorégraphie unique en son genre et qui en mettra plein la vue.</p>
+                    <p>Le peloton de précision s'adresse principalement à ceux qui aiment les chorégraphies, qui ont une
+                        bonne mémoire et qui ont une très bonne discipline. Le peloton de précision est un exercice de
+                        marche militaire où les rotations,
+                        contre-marche et changement de formation se joignent à l'alignement, la discipline, aux gestes
+                        vifs et mouvements secs pour faire une chorégraphie unique en son genre et qui en mettra plein
+                        la vue.</p>
                 </div>
                 <div class="col-sm-6 latest-news">
                     <h2>Musique</h2>
-                    <p>Notre programme de musique vise à développer des habiletés instrumentales pour des instruments d'harmonie. Nous participons aux parades du 2972 en plus de nous préparer pour des compétitions. Pas besoin de savoir jouer pour vous 
-                    joindre à notre équipe, on va vous montrer. Si vous savez déjà jouer, vous allez triper!</p>
+                    <p>Notre programme de musique vise à développer des habiletés instrumentales pour des instruments
+                        d'harmonie. Nous participons aux parades du 2972 en plus de nous préparer pour des compétitions.
+                        Pas besoin de savoir jouer pour vous
+                        joindre à notre équipe, on va vous montrer. Si vous savez déjà jouer, vous allez triper!</p>
                 </div>
             </div>
         </div>
@@ -159,25 +183,35 @@
                     <h3>Nos réseau sociaux</h3>
                     <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
                     <div>
-                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank" title="Page Facebook"><img src="images/logo_facebook.png" width="64" alt="Logo Facebook"></a>
-                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank" title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
-                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
+                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
+                            title="Page Facebook"><img src="images/logo_facebook.png" width="64"
+                                alt="Logo Facebook"></a>
+                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank"
+                            title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
+                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img
+                                src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
                     </div>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l'Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d'activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d'équipes seront testées.</p>
                 </div>
 
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer-copyright">
-                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
+                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license"
+                            href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons"
+                                style="border-width:0"
+                                src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
