--- a/cadets-cadres.html
+++ b/cadets-cadres.html
@@ -42,15 +42,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg" alt="Logo CC2972"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg"
+                        alt="Logo CC2972"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">Acceuil</a></li>
+                    <li><a href="index.html">Acceuil</a></li>
                     <li><a href="documents/messages.pdf" target="_blank">Messages de la semaine</a></li>
                     <li><a href="inscriptions.html">Inscriptions</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="activites_optionnelles.html">Activités optionnelles</a></li>
                             <li><a href="instruction_ete.html">Instruction d'été</a></li>
@@ -60,7 +62,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="references_instructeurs.html">Instructeurs</a></li>
                             <li><a href="references_cadets.html">Cadets</a></li>
@@ -71,12 +74,13 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="historique.html">Notre histoire</a></li>
                             <li><a href="distinctions.html">Distinctions</a></li>
                             <li><a href="personnel.html">Notre personnel</a></li>
-                            <li><a href="cadets-cadres.html">Nos cadets-cadres</a></li>
+                            <li class="active"><a href="cadets-cadres.html">Nos cadets-cadres</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contactez-Nous</a></li>
@@ -94,43 +98,38 @@
             </div>
         </div>
     </div>
-<!--
-        Une section etat-major avec adjuc/moi/adj
-        hr
-        taillon/braure
-        section cmdt-pon
-        section cmdt-son
--->
+
     <div class="section">
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <img class="img-responsive" src="images/adjuc.png" alt="Adjuc">
+                    <img class="img-responsive" src="images/insignes/adjuc.png" alt="Adjuc">
                 </div>
                 <div class="col-sm-10">
-                    <h2>Adjudant-Chef Frédérick De Blois</h2>
-                    <p class="lead">Sergent-Major Régimentaire et Cadet-Commandant</p>
+                    <h2>Adjudant-Chef Vicky Roy</h2>
+                    <p class="lead">Sergent-Major Régimentaire</p>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <img class="img-responsive" src="images/adjum.png" alt="Adjum">
+                    <img class="img-responsive" src="images/insignes/adjum.png" alt="Adjum">
                 </div>
                 <div class="col-sm-10">
-                    <h2>Adjudant-Maître William Bouchard-Dulude</h2>
-                    <p class="lead">Sergent-Major de Compagnie et Cadet-Commandant Adjoint</p>
+                    <h2>Adjudant-Maître Émile Laferrière</h2>
+                    <p class="lead">Sergent-Major de Compagnie</p>
+                    <p class="lead">Tambour-major</p>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <img class="img-responsive" src="images/adj.png" alt="Adj">
+                    <img class="img-responsive" src="images/insignes/adjum.png" alt="Adjum">
                 </div>
                 <div class="col-sm-10">
-                    <h2>Adjudant Jessica Gadoury</h2>
+                    <h2>Adjudant-Maître Emmanuel Rioux</h2>
                     <p class="lead">Sergent-Major à l'Instruction</p>
                 </div>
             </div>
@@ -139,112 +138,99 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <img class="img-responsive" src="images/adj.png" alt="Adj">
+                    <img class="img-responsive" src="images/insignes/adj.png" alt="Adj">
                 </div>
                 <div class="col-sm-10">
-                    <h2>Adjudant Alexandre Braure</h2>
-                    <p class="lead">Commandant de la Garde aux Drapeaux</p>
-                </div>
-            </div>
-        </div>
-        <hr>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-2">
-                    <img class="img-responsive" src="images/adj.png" alt="Adj">
-                </div>
-                <div class="col-sm-10">
-                    <h2>Adjudant Raphaelle De Bellefeuille</h2>
-                    <p class="lead">Commandant du Peloton 1</p>
+                    <h2>Adjudant Adam Lévis-Paquet</h2>
+                    <p class="lead">Commandant-Adjoint peloton Triquet</p>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <img class="img-responsive" src="images/sgt.png" alt="Sgt">
+                    <img class="img-responsive" src="images/insignes/adj.png" alt="Adj">
                 </div>
                 <div class="col-sm-10">
-                    <h2>Sergent Stéphanie Rioux</h2>
-                    <p class="lead">Commandant du Peloton 2</p>
-                </div>
-            </div>
-        </div>
-        <hr>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-2">
-                    <img class="img-responsive" src="images/sgt.png" alt="Sgt">
-                </div>
-                <div class="col-sm-10">
-                    <h2>Sergent Mégane Daneau</h2>
-                    <p class="lead">Commandant de Section</p>
+                    <h2>Adjudant Myranie Bonneau</h2>
+                    <p class="lead">Commandant-Adjoint peloton Keable</p>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <img class="img-responsive" src="images/sgt.png" alt="Sgt">
+                    <img class="img-responsive" src="images/insignes/adj.png" alt="Adj">
                 </div>
                 <div class="col-sm-10">
-                    <h2>Sergent Méliane Carrier-Favreau</h2>
-                    <p class="lead">Commandant de Section</p>
+                    <h2>Adjudant Rachel Rioux</h2>
+                    <p class="lead">Commandant de section 1 Keable</p>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <img class="img-responsive" src="images/sgt.png" alt="Sgt">
+                    <img class="img-responsive" src="images/insignes/cplc.png" alt="Cplc">
                 </div>
                 <div class="col-sm-10">
-                    <h2>Sergent Michael Rioux</h2>
-                    <p class="lead">Commandant de Section</p>
+                    <h2>Caporal-Chef Rozaly Mailhot Bergeron</h2>
+                    <p class="lead">Commandant de section 2 Keable</p>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <img class="img-responsive" src="images/sgt.png" alt="Sgt">
+                    <img class="img-responsive" src="images/insignes/cplc.png" alt="Cplc">
                 </div>
                 <div class="col-sm-10">
-                    <h2>Sergent Samuel Bouchard</h2>
-                    <p class="lead">Commandant de Section</p>
+                    <h2>Caporal-Chef Evan Piché-Gauvin</h2>
+                    <p class="lead">Commandant de section 3 Keable</p>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <img class="img-responsive" src="images/cplc.png" alt="Cplc">
+                    <img class="img-responsive" src="images/insignes/sgt.png" alt="Sgt">
                 </div>
                 <div class="col-sm-10">
-                    <h2>Caporal-Chef Jérémy Laforest-Picard</h2>
-                    <p class="lead">Commandant de Section</p>
+                    <h2>Sergent Rafael Venditti</h2>
+                    <p class="lead">Adjoint peleton Triquet</p>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <img class="img-responsive" src="images/cplc.png" alt="Cplc">
+                    <img class="img-responsive" src="images/insignes/sgt.png" alt="Sgt">
                 </div>
                 <div class="col-sm-10">
-                    <h2>Caporal-Chef Joël St-Onge</h2>
-                    <p class="lead">Commmandant de Section</p>
+                    <h2>Sergent Éloi Desjardins</h2>
+                    <p class="lead">Commandant de section 1 Triquet</p>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <img class="img-responsive" src="images/cplc.png" alt="Cplc">
+                    <img class="img-responsive" src="images/insignes/sgt.png" alt="Sgt">
                 </div>
                 <div class="col-sm-10">
-                    <h2>Caporal-Chef Jessica Vincent</h2>
-                    <p class="lead">Commandant de Section</p>
+                    <h2>Sergent Raphael Gingras</h2>
+                    <p class="lead">Commandant de section 2 Triquet</p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-2">
+                    <img class="img-responsive" src="images/insignes/sgt.png" alt="Sgt">
+                </div>
+                <div class="col-sm-10">
+                    <h2>Sergent Rhéane Elsa Dieutchou Yougang</h2>
+                    <p class="lead">Commandant de section 3 Triquet</p>
                 </div>
             </div>
         </div>
@@ -268,25 +254,35 @@
                     <h3>Nos réseau sociaux</h3>
                     <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
                     <div>
-                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank" title="Page Facebook"><img src="images/logo_facebook.png" width="64" alt="Logo Facebook"></a>
-                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank" title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
-                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
+                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
+                            title="Page Facebook"><img src="images/logo_facebook.png" width="64"
+                                alt="Logo Facebook"></a>
+                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank"
+                            title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
+                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img
+                                src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
                     </div>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l'Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d'activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d'équipes seront testées.</p>
                 </div>
 
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer-copyright">
-                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
+                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license"
+                            href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons"
+                                style="border-width:0"
+                                src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
