--- a/index.html
+++ b/index.html
@@ -193,35 +193,35 @@
                         <h1>Le défi ultime!</h1>
                     </div>
                 </div>
-                <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et
-                    d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
-                    d’équipes seront
+                <p>Les cadets royaux de l'Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                    d'activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                    d'équipes seront
                     testées. Les inconditionnels des activités en plein-air vont adorer les défis que nous offrons!
                 </p>
 
-                <p>Les cadets de l’Armée vont développer leurs habiletés dans le maniement de cartes et boussoles,
-                    du GPS, de l’orienteering, des premiers-soins, de la survie et du camping en forêt, du canotage,
+                <p>Les cadets de l'Armée vont développer leurs habiletés dans le maniement de cartes et boussoles,
+                    du GPS, de l'orienteering, des premiers-soins, de la survie et du camping en forêt, du canotage,
                     de la descente en
-                    rappel, de la randonnée, du vélo de montage, etc. Alors qu’ils acquièrent de l’expérience,
+                    rappel, de la randonnée, du vélo de montage, etc. Alors qu'ils acquièrent de l'expérience,
                     certains vont aussi être sélectionnés pour des activités excitantes comme le parachutisme, la
                     descente de rivière en
-                    canot, l’escalade de glacier et ils apprendront à devenir des leaders de plein-air.</p>
+                    canot, l'escalade de glacier et ils apprendront à devenir des leaders de plein-air.</p>
 
-                <p>Les cadets de l’Armée participent à des activités reliées aux traditions des cérémonies
-                    militaires et de civisme qui leur permettent d’honorer leur héritage canadien. Ils développent
+                <p>Les cadets de l'Armée participent à des activités reliées aux traditions des cérémonies
+                    militaires et de civisme qui leur permettent d'honorer leur héritage canadien. Ils développent
                     un grand sens de fierté et
-                    de discipline par l’utilisation d’un système hiérarchique qui leur permet de parfaire leurs
+                    de discipline par l'utilisation d'un système hiérarchique qui leur permet de parfaire leurs
                     capacités de chef de file. Avec l'expérience, ils apprennent à se soucier des plus jeunes
                     cadets.</p>
 
-                <p>En plus de l’instruction spécialisée, les cadets de l’Armée participent aussi à d’autres
+                <p>En plus de l'instruction spécialisée, les cadets de l'Armée participent aussi à d'autres
                     activités passionnantes comme le tir à la carabine de style olympique et le biathlon, des
                     compétitions sportives, de
-                    l’instruction et des compétitions musicales, des visites culturelles, des activités bénévoles de
+                    l'instruction et des compétitions musicales, des visites culturelles, des activités bénévoles de
                     soutien à la communauté, etc.</p>
 
                 <p>Le Canada est le terrain de jeu par excellence pour les adolescents intéressés par le plein air.
-                    Nous sommes l’organisation par excellence pour les jeunes et les adultes intéressés à sortir de
+                    Nous sommes l'organisation par excellence pour les jeunes et les adultes intéressés à sortir de
                     la salle de
                     classe pour explorer la planète à son plein potentiel.</p>
             </div>
@@ -259,9 +259,9 @@
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et
-                        d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
-                        d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l'Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d'activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d'équipes seront testées.</p>
                 </div>
 
             </div>
