--- a/parents.html
+++ b/parents.html
@@ -42,15 +42,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg" alt="Logo CC2972"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg"
+                        alt="Logo CC2972"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">Acceuil</a></li>
+                    <li><a href="index.html">Acceuil</a></li>
                     <li><a href="documents/messages.pdf" target="_blank">Messages de la semaine</a></li>
                     <li><a href="inscriptions.html">Inscriptions</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="activites_optionnelles.html">Activités optionnelles</a></li>
                             <li><a href="instruction_ete.html">Instruction d'été</a></li>
@@ -60,18 +62,20 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="references_instructeurs.html">Instructeurs</a></li>
                             <li><a href="references_cadets.html">Cadets</a></li>
                             <li><a href="references_cadets-cadres.html">Cadets-cadres</a></li>
                             <li><a href="recompenses.html">Récompenses</a></li>
                             <li><a href="grades_fonctions.html">Grades & fonctions</a></li>
-                            <li><a href="parents.html">Parents</a></li>
+                            <li class="active"><a href="parents.html">Parents</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="historique.html">Notre histoire</a></li>
                             <li><a href="distinctions.html">Distinctions</a></li>
@@ -89,7 +93,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Aide à l'Instruction</h1>
+                    <h1>Parents</h1>
                 </div>
             </div>
         </div>
@@ -99,7 +103,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-8">
-                    <p class="lead">Voici des documents utiles pour les instructeurs.</p>
+                    <p>Votre participation en tant que parents bénévoles est primordiale au bon fonctionnement du corps
+                        de cadets. C'est grâce à votre implication, que le corps de cadets peut soutenir financièrement
+                        les activités optionnelles telles que la musique, le tir et le sport, les activités sociales
+                        ainsi que certains frais opérationnels.
+                        <br>
+                        Le comité de soutien a aussi pour rôle de représenter les parents auprès du commandant. En cas
+                        de questionnement ou de conflit, n'hésitez pas à communiquer avec un des membres du comité qui
+                        est présent au début et à la fin des soirées d'entraînement ou en envoyant un courriel à : <a
+                            href="mailto:2972.comite@lcac.qc.ca">2972.comite@lcac.qc.ca</a>
+                    </p>
                 </div>
             </div>
         </div>
@@ -107,43 +120,61 @@
     <hr>
     <div class="section">
         <div class="container">
-            <div class="row">               <!--Les liens sont vers un autre site car les documents sont trop gros et il n'y avait pas assez d'espace sur calypso.-->
-                <h2>Niveau Vert</h2>
-                <ul>
-                    <li><a href="http://www.cc2972.ca/web/images/Documents/GP_VERT_2013_12_20.pdf" target="_blank" title="Guide pédagogique vert">Guide pédagogique niveau vert</a> (11 Mo)</li>
-                    <li><a href="http://www.cc2972.ca/web/images/Documents/NQP_VERT_2013_12_20.pdf" target="_blank" title="Normes de qualification et plan de l'étoile verte">Normes de qualification et plan de l'étoile verte</a> (3 Mo)</li>
-                </ul>
-                <hr>
-                <h2>Niveau Rouge</h2>
-                <ul>
-                    <li><a href="http://www.cc2972.ca/web/images/Documents/GP_ROUGE_2013_12_20.pdf" target="_blank" title="Guide pédagogique rouge">Guide pédagogique niveau rouge</a> (15 Mo)</li>
-                    <li><a href="http://www.cc2972.ca/web/images/Documents/NQP_ROUGE_2013_12_20.pdf" target="_blank" title="Normes de qualification et plan de l'étoile rouge">Normes de qualification et plan de l'étoile rouge</a> (1 Mo)</li>
-                </ul>
-                <hr>
-                <h2>Niveau Argent</h2>
-                <ul>
-                    <li><a href="http://www.cc2972.ca/web/images/Documents/GP_ARGENT_1_DE_2_2013_12_20.pdf" target="_blank" title="Guide pédagogique argent(1)">Guide pédagogique niveau argent partie 1</a> (25 Mo)</li>
-                    <li><a href="http://www.cc2972.ca/web/images/Documents/GP_ARGENT_2_DE_2_2013_12_20.pdf" target="_blank" title="Guide pédagogique argent(2)">Guide pédagogique niveau argent partie 2</a> (22 Mo)</li>
-                    <li><a href="http://www.cc2972.ca/web/images/Documents/NQP_ARGENT_2013_12_20.pdf" target="_blank" title="Normes de qualification et plan de l'étoile argent">Normes de qualification et plan de l'étoile argent</a> (3 Mo)</li>
-                </ul>
-                <hr>
-                <h2>Niveau Or</h2>
-                <ul>
-                    <li><a href="http://www.cc2972.ca/web/images/Documents/GP_OR_2013_12_20.pdf" target="_blank" title="Guide pédagogique or">Guide pédagogique niveau or</a> (29 Mo)</li>
-                    <li><a href="http://www.cc2972.ca/web/images/Documents/NQP_OR_2013_12_20.pdf" target="_blank" title="Normes de qualification et plan de l'étoile or">Normes de qualification et plan de l'étoile or</a> (4 Mo)</li>
-                </ul>
-                <hr>
-                <h2>Cadet-Maître</h2>
-                <ul>
-                    <li><a href="http://www.cc2972.ca/web/images/Documents/GP_CADET-MAITRE_2013_12_20.pdf" target="_blank" title="Guide pédagogique du cadet-maître">Guide pédagogique du cadet-maître</a> (10 Mo)</li>
-                    <li><a href="http://www.cc2972.ca/web/images/Documents/NQP_CADET-MAITRE_2013_12_20.pdf" target="_blank" title="Normes de qualification et plan du cadet-maître">Normes de qualification et plan du cadet-maître</a> (2 Mo)</li>
-                </ul>
-                <hr>
-                <h2>Instructeurs</h2>
-                <ul>
-                    <li><a href="http://www.cc2972.ca/web/images/Documents/PlAN_DE_LECON_EN_CLASSE.pdf" target="_blank" title="Plan de leçon">Plan de leçon</a> (543 Ko)</li>
-                    <li><a href="http://www.cc2972.ca/web/images/Documents/PlAN_DE_LECON_D_EXERCICE_MILITAIRE.pdf" target="_blank" title="Plan de leçon d'exercice militaire">Plan de leçon d'exercice militaire</a> (76 Ko)</li>
-                </ul>
+            <div class="row">
+                <h1>Comment devenir bénévole au CC2972 Mercier</h1>
+                <div class="col-sm-8">
+                    <p>Un corps de cadets ne pourrait exister sans l'apport exceptionnel de ses bénévoles. Il existe
+                        plusieurs façons de s'impliquer</p>
+                    <br>
+                    <p>Voici comment vous pouvez faire une différence:</p>
+                    <ul>
+                        <li>En siégeant au sein du comité de soutien: Les membres du comité se rencontrent une fois par
+                            mois pour discuter et prendre des décisions sur des sujets relatifs au soutien logistique et
+                            financier du corps de cadets.</li>
+                        <li>En accompagnant les cadets lors d'activités: Il ne faut pas hésiter à donner votre nom
+                            lorsqu'on demande des volontaires pour ainsi alléger la charge du personnel instructeur.
+                            C'est une expérience très enrichissante.</li>
+                        <li>En participant aux campagnes de financement: Il y a plusieurs campagnes de financement au
+                            courant de l'année. Vente de chocolat, collecte de contenants consignés, emballage au Super
+                            C et souper spaghetti. Pour que ces campagnes soient un succès, le comité de soutien a
+                            besoin de nombreux bénévoles.</li>
+                        <li>En devenant membre du personnel: Toute personne désirant donner du temps comme instructeur
+                            ou s'occuper de certain dossier comme les sports, le tir, la musique ou encore apporter un
+                            soutien logistique en s'occupant du quatier-maître.</li>
+                    </ul>
+                    <p>Dans tous les cas, chaque bénévole qui désire s'impliquer dans un corps de cadets doit se
+                        soumettre à une enquête d'antécédants judiciaires. Le proccèsus est sans frais. Si vous avez
+                        envie de vous impliquer, communiquez avec nous via courriel à <a
+                            href="mailto:cadets@cc2972.ca">cadets@cc2972.ca</a> ou en personne chaque mardi soir. Vous
+                        n'avez qu'à demander à parler à la présidente du comité de soutien ou au commandant.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="section">
+        <div class="container">
+            <h1>Le comité de soutien</h1>
+            <div class="row">
+                <div class="col-sm-8">
+                    <h2>Julie Vaillancourt</h2>
+                    <p class="lead">Présidente</p>
+                    <hr>
+                    <h2>Julie Vaillancourt</h2>
+                    <p class="lead">Présidente</p>
+                    <hr>
+                    <h2>Julie Vaillancourt</h2>
+                    <p class="lead">Présidente</p>
+                    <hr>
+                    <h2>Julie Vaillancourt</h2>
+                    <p class="lead">Présidente</p>
+                    <hr>
+                    <h2>Julie Vaillancourt</h2>
+                    <p class="lead">Présidente</p>
+                    <hr>
+                    <h2>Julie Vaillancourt</h2>
+                    <p class="lead">Présidente</p>
+                </div>
             </div>
         </div>
     </div>
@@ -166,25 +197,35 @@
                     <h3>Nos réseau sociaux</h3>
                     <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
                     <div>
-                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank" title="Page Facebook"><img src="images/logo_facebook.png" width="64" alt="Logo Facebook"></a>
-                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank" title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
-                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
+                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
+                            title="Page Facebook"><img src="images/logo_facebook.png" width="64"
+                                alt="Logo Facebook"></a>
+                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank"
+                            title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
+                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img
+                                src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
                     </div>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l'Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d'activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d'équipes seront testées.</p>
                 </div>
 
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer-copyright">
-                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
+                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license"
+                            href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons"
+                                style="border-width:0"
+                                src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
