--- a/references_cadets-cadres.html
+++ b/references_cadets-cadres.html
@@ -108,26 +108,26 @@
                     <h1>Sous-officier de service</h1>
                     <h3>Attribution</h3>
                     <p>
-                        Le poste de sous-officier de service est occupé par les cadets de l’étoile argentée et plus du
+                        Le poste de sous-officier de service est occupé par les cadets de l'étoile argentée et plus du
                         Corps de cadets, qui en assumeront la responsabilité, un à la fois, à tour de rôle. Lorsqu'il
                         est en service, le sous-officier de service est sous le commandement direct de l'officier de
                         service. Cette fonction n'est pas permanente et ne donne pas droit au titre de cadet-cadre.
                     </p>
                     <h3>Responsabilités</h3>
                     <ul>
-                        <li>Le sous-officier de service devra se présenter sur les lieux de l’entraînement 15 minutes
-                            avant l'arrivée des autres cadets ou à l'heure désignée par l’officier de service.</li>
-                        <li>Se rapporte à l’officier de service dès son arrivée et attendra son autorisation pour
+                        <li>Le sous-officier de service devra se présenter sur les lieux de l'entraînement 15 minutes
+                            avant l'arrivée des autres cadets ou à l'heure désignée par l'officier de service.</li>
+                        <li>Se rapporte à l'officier de service dès son arrivée et attendra son autorisation pour
                             quitter.</li>
                         <li>Doit accompagner l'officier de service pour l'ouverture et la fermeture du site
-                            d’instruction.</li>
-                        <li>Responsable de la tenue du rapport d’entraînement et doit le remettre à l’officier de
+                            d'instruction.</li>
+                        <li>Responsable de la tenue du rapport d'entraînement et doit le remettre à l'officier de
                             service à la fin de la journée.</li>
-                        <li>Responsable de faire placer le matériel afin d’assurer le bon fonctionnement de la soirée
-                            d’instruction en début de soirée et de les rapporter en fin de soirée.</li>
+                        <li>Responsable de faire placer le matériel afin d'assurer le bon fonctionnement de la soirée
+                            d'instruction en début de soirée et de les rapporter en fin de soirée.</li>
                         <li>Doit signaler dans son rapport tout danger pour la sécurité des cadets sur le site
                             d'entraînement ou d'instruction.</li>
-                        <li>S'assurer de la propreté des locaux avant de procéder à l’inspection par l'officier de
+                        <li>S'assurer de la propreté des locaux avant de procéder à l'inspection par l'officier de
                             service.</li>
                         <li>Doit assister à l'entraînement requis par son programme de niveau, hormis les 5 dernières
                             minutes de ses cours.</li>
@@ -167,9 +167,9 @@
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et
-                        d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
-                        d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l'Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d'activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d'équipes seront testées.</p>
                 </div>
 
             </div>
