--- a/references_cadets.html
+++ b/references_cadets.html
@@ -164,13 +164,13 @@
                     <h3 style="padding-top: 50px;">Le bérêt</h3>
                     <img src="/images/beret.jpg" alt="" />
                     <ul>
-                        <li>L’insigne de béret se porte au-dessus de l’œil gauche</li>
-                        <li>Lorsque l’insigne est cousu, il doit être à 1 cm du rebord supérieur (bande noire) du béret
+                        <li>L'insigne de béret se porte au-dessus de l'œil gauche</li>
+                        <li>Lorsque l'insigne est cousu, il doit être à 1 cm du rebord supérieur (bande noire) du béret
                         </li>
-                        <li>Vous devez coudre l’insigne autour de la partie rigide de cuir</li>
+                        <li>Vous devez coudre l'insigne autour de la partie rigide de cuir</li>
                         <li>La calotte (rabat) du béret doit retomber du côté droit</li>
                         <li>Le béret se porte à 2.5 cm des sourcils</li>
-                        <li>Le cordon doit être à l’intérieur (invisible)</li>
+                        <li>Le cordon doit être à l'intérieur (invisible)</li>
                         <li>Ne pas le laver à la machine ni le mettre à la sécheuse (il est fait de laine)</li>
                         <li>Pour le former adéquatement, vous devez le mouiller et lui donner la forme désirée tout en
                             le portant sur votre tête.</li>
@@ -181,31 +181,31 @@
                     <ul>
                         <li>Les bottes doivent être cirées régulièrement</li>
                         <li>Pour ce faire, vous devez avoir un linge à polir et de la cire noire « KIWI »</li>
-                        <li>Il suffit de prendre le côté doux du linge à polir et de le tendre autour de l’index. Puis,
-                            ajoutez-y de la cire et un peu d’eau. Ensuite, faites de petits mouvements circulaires
-                            jusqu’à que la cire soit bien pénétrée à la surface du cuir. Recommencez, en prenant soin de
-                            changer d’endroit sur votre linge, jusqu’à ce que les bottes aient une surface miroir</li>
-                        <li>Les bas de laine doivent être portés à l’intérieur des bottes</li>
+                        <li>Il suffit de prendre le côté doux du linge à polir et de le tendre autour de l'index. Puis,
+                            ajoutez-y de la cire et un peu d'eau. Ensuite, faites de petits mouvements circulaires
+                            jusqu'à que la cire soit bien pénétrée à la surface du cuir. Recommencez, en prenant soin de
+                            changer d'endroit sur votre linge, jusqu'à ce que les bottes aient une surface miroir</li>
+                        <li>Les bas de laine doivent être portés à l'intérieur des bottes</li>
                     </ul>
                     <h3 style="padding-top: 50px;">Divers points sur la tenue</h3>
                     <p>Repassage:</p>
                     <ul>
                         <li>La vareuse est repassée sans pli</li>
                         <li>La chemise est repassée avec un pli au centre de chaque manche</li>
-                        <li>Le pantalon est repassé avec un pli bien net au centre, à l’avant et à l’arrière</li>
+                        <li>Le pantalon est repassé avec un pli bien net au centre, à l'avant et à l'arrière</li>
                     </ul>
                     <p>Lavage:</p>
                     <ul>
-                        <li>L’uniforme doit être lavé régulièrement</li>
-                        <li>Il n’est pas nécessaire de le faire nettoyer à sec</li>
-                        <li>Toutes les pièces, à l’exception du béret et de la cravate, peuvent être lavées et séchées à
+                        <li>L'uniforme doit être lavé régulièrement</li>
+                        <li>Il n'est pas nécessaire de le faire nettoyer à sec</li>
+                        <li>Toutes les pièces, à l'exception du béret et de la cravate, peuvent être lavées et séchées à
                             la machine</li>
                     </ul>
                     <p>Bijoux:</p>
                     <ul>
                         <li>Les bijoux sont généralement interdits</li>
-                        <li>Les cadets peuvent porter un bouton d’oreille simple par oreille</li>
-                        <li>Les montres, les bracelets « Medic Alert » et les bracelets d’identité sont permis
+                        <li>Les cadets peuvent porter un bouton d'oreille simple par oreille</li>
+                        <li>Les montres, les bracelets « Medic Alert » et les bracelets d'identité sont permis
                         </li>
                     </ul>
                     <p>Maquillage:</p>
@@ -559,38 +559,38 @@
                     <ul>
                         <li>Avoir réussi la première année du programme d'étoile</li>
                         <li>Avoir la recommandation du responsable de niveau</li>
-                        <li>Avoir participé à l’évaluation de la condition physique</li>
+                        <li>Avoir participé à l'évaluation de la condition physique</li>
                     </ul>
                     <h3><img src="images/insignes/cplc.png" width="32px">Caporal-Chef</h3>
                     <ul>
                         <li>Avoir au moins six mois de service au grade de caporal</li>
                         <li>Avoir réussi la deuxième année du programme d'étoile</li>
                         <li>Avoir la recommandation du responsable de niveau</li>
-                        <li>Avoir participé à l’évaluation de la condition physique</li>
+                        <li>Avoir participé à l'évaluation de la condition physique</li>
                     </ul>
                     <h3><img src="images/insignes/sgt.png" width="32px">Sergent</h3>
                     <ul>
                         <li>Avoir au moins six mois de service au grade de caporal-chef</li>
                         <li>Avoir réussi la troisième année du programme d'étoile</li>
                         <li>Avoir la recommandation du responsable de niveau</li>
-                        <li>Avoir participé à l’évaluation de la condition physique</li>
-                        <li>Obtenir au moins la mention « atteint sans difficulté » dans l’OREN 303</li>
+                        <li>Avoir participé à l'évaluation de la condition physique</li>
+                        <li>Obtenir au moins la mention « atteint sans difficulté » dans l'OREN 303</li>
                     </ul>
                     <h3><img src="images/insignes/adj.png" width="32px">Adjudant</h3>
                     <ul>
                         <li>Avoir au moins six mois de service au grade de sergent</li>
                         <li>Avoir réussi la quatrième année du programme d'étoile</li>
                         <li>Avoir la recommandation du responsable de niveau</li>
-                        <li>Avoir participé à l’évaluation de la condition physique</li>
-                        <li>Obtenir au moins la mention « atteint sans difficulté » dans l’OREN 403</li>
+                        <li>Avoir participé à l'évaluation de la condition physique</li>
+                        <li>Obtenir au moins la mention « atteint sans difficulté » dans l'OREN 403</li>
                     </ul>
                     <h3><img src="images/insignes/adjum.png" width="32px">Adjudant-Maître</h3>
                     <ul>
                         <li>Avoir au moins six mois de service au grade d'adjudant</li>
                         <li>Voir sa candidature retenue à la suite du processus du conseil de mérite</li>
                         <li>Avoir la recommandation du responsable de niveau</li>
-                        <li>Avoir participé à l’évaluation de la condition physique</li>
-                        <li>Obtenir au moins la mention « atteint sans difficulté » dans l’OREN 503</li>
+                        <li>Avoir participé à l'évaluation de la condition physique</li>
+                        <li>Obtenir au moins la mention « atteint sans difficulté » dans l'OREN 503</li>
                     </ul>
                     <h3><img src="images/insignes/adjuc.png" width="32px">Adjudant-Chef</h3>
                     <ul>
@@ -631,9 +631,9 @@
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et
-                        d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
-                        d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l'Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d'activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d'équipes seront testées.</p>
                 </div>
 
             </div>
