--- a/contact.html
+++ b/contact.html
@@ -191,9 +191,9 @@
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et
-                        d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
-                        d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l'Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d'activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d'équipes seront testées.</p>
                 </div>
 
             </div>
