--- a/duc.html
+++ b/duc.html
@@ -42,7 +42,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg" alt="Logo CC2972"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg"
+                        alt="Logo CC2972"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -50,7 +51,8 @@
                     <li><a href="documents/messages.pdf" target="_blank">Messages de la semaine</a></li>
                     <li><a href="inscriptions.html">Inscriptions</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="activites_optionnelles.html">Activités optionnelles</a></li>
                             <li><a href="instruction_ete.html">Instruction d'été</a></li>
@@ -60,7 +62,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="references_instructeurs.html">Instructeurs</a></li>
                             <li><a href="references_cadets.html">Cadets</a></li>
@@ -71,7 +74,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="historique.html">Notre histoire</a></li>
                             <li><a href="distinctions.html">Distinctions</a></li>
@@ -94,7 +98,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="section">
         <div class="container">
             <div class="section">
@@ -102,12 +106,19 @@
                     <div class="row">
                         <div class="col-sm-10">
                             <h1>Le Prix du Duc d'Edimbourg</h1>
-                            <p>Le prix du Duc d'Édimbourg est un programme offert à tous les jeunes de 14 à 25 ans. Il leur permet de se distinguer à un des trois niveaux&nbsp;: Bronze, Argent ou Or, en effectuant les activités exigées pendant leurs loisirs et 
-                            lors du temps déjà consacré au sein du mouvement des cadets. Le programme se divise en quatre sections : service communautaire, conditionnement physique, habiletés et voyage d'aventure (expédition ou exploration). L'objectif 
-                            principal du programme est de développer l'autonomie, le leadership, l'engagement communautaire par la quête de l'excellence. Il mesure essentiellement l'amélioration de chacun des participants sans qu'il y ait une compétition 
-                            entre eux. Une présentation sera faite durant l'année pour expliquer le contenu et le fonctionnement du prix du Duc d'Édimbourg. </p>
+                            <p>Le prix du Duc d'Édimbourg est un programme offert à tous les jeunes de 14 à 25 ans. Il
+                                leur permet de se distinguer à un des trois niveaux&nbsp;: Bronze, Argent ou Or, en
+                                effectuant les activités exigées pendant leurs loisirs et
+                                lors du temps déjà consacré au sein du mouvement des cadets. Le programme se divise en
+                                quatre sections : service communautaire, conditionnement physique, habiletés et voyage
+                                d'aventure (expédition ou exploration). L'objectif
+                                principal du programme est de développer l'autonomie, le leadership, l'engagement
+                                communautaire par la quête de l'excellence. Il mesure essentiellement l'amélioration de
+                                chacun des participants sans qu'il y ait une compétition
+                                entre eux. Une présentation sera faite durant l'année pour expliquer le contenu et le
+                                fonctionnement du prix du Duc d'Édimbourg. </p>
                         </div>
-                        
+
                         <div class="col-md-4 col-sm-6">
                             <img src="images/insignes/duc_or.png" alt="Duc d'Edimbourg Or">
                             <img src="images/insignes/duc_argent.png" alt="Duc d'Edimbourg Argent">
@@ -147,25 +158,35 @@
                     <h3>Nos réseau sociaux</h3>
                     <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
                     <div>
-                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank" title="Page Facebook"><img src="images/logo_facebook.png" width="64" alt="Logo Facebook"></a>
-                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank" title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
-                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
+                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
+                            title="Page Facebook"><img src="images/logo_facebook.png" width="64"
+                                alt="Logo Facebook"></a>
+                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank"
+                            title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
+                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img
+                                src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
                     </div>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l'Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d'activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d'équipes seront testées.</p>
                 </div>
 
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer-copyright">
-                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
+                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license"
+                            href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons"
+                                style="border-width:0"
+                                src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
