--- a/emplacements.html
+++ b/emplacements.html
@@ -42,7 +42,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg" alt="Logo CC2972"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg"
+                        alt="Logo CC2972"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -50,7 +51,8 @@
                     <li><a href="documents/messages.pdf" target="_blank">Messages de la semaine</a></li>
                     <li><a href="inscriptions.html">Inscriptions</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="activites_optionnelles.html">Activités optionnelles</a></li>
                             <li><a href="instruction_ete.html">Instruction d'été</a></li>
@@ -60,7 +62,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="references_instructeurs.html">Instructeurs</a></li>
                             <li><a href="references_cadets.html">Cadets</a></li>
@@ -71,7 +74,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="historique.html">Notre histoire</a></li>
                             <li><a href="distinctions.html">Distinctions</a></li>
@@ -112,7 +116,9 @@
                         <p>720 Boul. Saint-Jean Baptiste, Mercier, Québec</p>
                     </div>
                     <div class="col-sm-6">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2805.5614774943647!2d-73.74336608434297!3d45.317283251255525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc96b0d2cdd4eff%3A0xade612f02ce6cfea!2s720+Boulevard+Saint-Jean-Baptiste%2C+Mercier%2C+QC+J6R+1G6!5e0!3m2!1sfr!2sca!4v1450117745963" width="600" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2805.5614774943647!2d-73.74336608434297!3d45.317283251255525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc96b0d2cdd4eff%3A0xade612f02ce6cfea!2s720+Boulevard+Saint-Jean-Baptiste%2C+Mercier%2C+QC+J6R+1G6!5e0!3m2!1sfr!2sca!4v1450117745963"
+                            width="600" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -126,7 +132,9 @@
                         <p>13 rue Marleau, Mercier, Québec</p>
                     </div>
                     <div class="col-sm-6">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2805.8800918422353!2d-73.74944458434308!3d45.31084775168374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc96b0a91c70349%3A0xc1cc74d051e44ca5!2s13+Rue+Marleau%2C+Mercier%2C+QC+J6R+2K8!5e0!3m2!1sfr!2sca!4v1450117965493" width="600" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2805.8800918422353!2d-73.74944458434308!3d45.31084775168374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc96b0a91c70349%3A0xc1cc74d051e44ca5!2s13+Rue+Marleau%2C+Mercier%2C+QC+J6R+2K8!5e0!3m2!1sfr!2sca!4v1450117965493"
+                            width="600" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -140,7 +148,9 @@
                         <p>14 rue de l'Église, Mercier, Québec</p>
                     </div>
                     <div class="col-sm-6">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2805.9018447497933!2d-73.74663248434311!3d45.31040835171308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc96b754c911337%3A0xbc5b186f1c8931dd!2s14+Rue+de+l&#39;%C3%89glise%2C+Mercier%2C+QC+J6R+2K8!5e0!3m2!1sfr!2sca!4v1450118110315" width="600" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2805.9018447497933!2d-73.74663248434311!3d45.31040835171308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc96b754c911337%3A0xbc5b186f1c8931dd!2s14+Rue+de+l&#39;%C3%89glise%2C+Mercier%2C+QC+J6R+2K8!5e0!3m2!1sfr!2sca!4v1450118110315"
+                            width="600" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -154,7 +164,9 @@
                         <p>14 rue Vervais, Mercier, Québec</p>
                     </div>
                     <div class="col-sm-6">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2805.928013368032!2d-73.7512046843431!3d45.309879751748134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc96ba086f1aa55%3A0x5a2e91912c81d578!2s14+Rue+Vervais%2C+Mercier%2C+QC+J6R+2K9!5e0!3m2!1sfr!2sca!4v1450118217608" width="600" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2805.928013368032!2d-73.7512046843431!3d45.309879751748134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc96ba086f1aa55%3A0x5a2e91912c81d578!2s14+Rue+Vervais%2C+Mercier%2C+QC+J6R+2K9!5e0!3m2!1sfr!2sca!4v1450118217608"
+                            width="600" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -168,7 +180,9 @@
                         <p>1 rue Batiscan, Mercier, Québec</p>
                     </div>
                     <div class="col-sm-6">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2804.3667361715275!2d-73.74844258434223!3d45.34140874964931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc96b2ed712ef2d%3A0xcc3d60f66d40306!2s1+Rue+de+Batiscan%2C+Mercier%2C+QC+J6R+2P2!5e0!3m2!1sfr!2sca!4v1450118392890" width="600" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2804.3667361715275!2d-73.74844258434223!3d45.34140874964931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc96b2ed712ef2d%3A0xcc3d60f66d40306!2s1+Rue+de+Batiscan%2C+Mercier%2C+QC+J6R+2P2!5e0!3m2!1sfr!2sca!4v1450118392890"
+                            width="600" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -192,25 +206,35 @@
                     <h3>Nos réseau sociaux</h3>
                     <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
                     <div>
-                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank" title="Page Facebook"><img src="images/logo_facebook.png" width="64" alt="Logo Facebook"></a>
-                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank" title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
-                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
+                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
+                            title="Page Facebook"><img src="images/logo_facebook.png" width="64"
+                                alt="Logo Facebook"></a>
+                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank"
+                            title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
+                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img
+                                src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
                     </div>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l'Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d'activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d'équipes seront testées.</p>
                 </div>
 
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer-copyright">
-                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
+                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license"
+                            href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons"
+                                style="border-width:0"
+                                src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
