--- a/expeditions.html
+++ b/expeditions.html
@@ -104,13 +104,31 @@
             <div class="row">
                 <div class="col-sm-10">
                     <h1>Exercice aventurier</h1>
-                    <p>Les cadets vont en exercice aventurier trois fois par année (automne, hiver et printemps). Un exercice aventurier se déroule du vendredi soir au dimanche après-midi. Lors de ces fins de semaines, les cadets ont l'occasion de mettre leurs notions de leadership à l'épreuve.</p>
-                    <p>Ils apprennent des notions de survie en forêt, comment construire des abris naturels et comment faire des feux. Ils ont aussi l'occasion de mettre en pratique leurs notions de topographie, comment utiliser une carte et boussole et comment utiliser un GPS.</p>
-                    <p>Les cadets qui désirent vivent d'autres aventures de plein-air peuvent le faire à travers quatre autres activités.</p>
+                    <p>Les cadets vont en exercice aventurier trois fois par année (automne, hiver et printemps). Un
+                        exercice aventurier se déroule du vendredi soir au dimanche après-midi. Lors de ces fins de
+                        semaines, les cadets ont l'occasion de mettre leurs notions de leadership à l'épreuve.</p>
+                    <p>Ils apprennent des notions de survie en forêt, comment construire des abris naturels et comment
+                        faire des feux. Ils ont aussi l'occasion de mettre en pratique leurs notions de topographie,
+                        comment utiliser une carte et boussole et comment utiliser un GPS.</p>
+                    <p>Les cadets qui désirent vivent d'autres aventures de plein-air peuvent le faire à travers quatre
+                        autres activités.</p>
                     <h1>Programme expédition</h1>
-                    <p>Depuis l'année 2000, la Ligue des Cadets de l'Armée du Canada et le Ministère de la Défense Nationale ont permis à plusieurs cadets de l'Armée de participer aux expéditions internationales et nationales. Ces expéditions ont permis à des jeunes canadiens de visiter plusieurs pays et destinations comme le Maroc, l'Australie, la Corée du Sud, le Costa Rica, les états-Unis, le Mont Blanc, l'Italie, l'Espagne et la France ainsi que des voyages à l'intérieur de notre magnifique pays.</p>
-                    <p>Le programme d'Expédition des Cadets de l'Armée est l'activité la plus réputée où les meilleurs cadets de partout au Canada testeront et iront à la limite de leurs capacités physiques et mentales. Ces expériences de voyage permettent aux cadets de développer leur autonomie, leur leadership et leur côté aventurier autant que la signification d'être canadien.</p>
-                    <p>Les activités d'expédition permettent aux cadets de perfectionner des compétences en navigation, randonnée de haute montagne, survie en forêt et leadership. Tous les cadets doivent obligatoirement prendre part aux activités d'expédition au niveau local et de leur zone. Ils peuvent aussi décider de participer à des expéditions plus avancées à l'échelle régionale, nationale et internationale selon leurs intérêts personnels, leurs compétences et leur désir de se mesurer à eux-mêmes dans le dépassement d'un degré supérieur de difficulté.</p>
+                    <p>Depuis l'année 2000, la Ligue des Cadets de l'Armée du Canada et le Ministère de la Défense
+                        Nationale ont permis à plusieurs cadets de l'Armée de participer aux expéditions internationales
+                        et nationales. Ces expéditions ont permis à des jeunes canadiens de visiter plusieurs pays et
+                        destinations comme le Maroc, l'Australie, la Corée du Sud, le Costa Rica, les états-Unis, le
+                        Mont Blanc, l'Italie, l'Espagne et la France ainsi que des voyages à l'intérieur de notre
+                        magnifique pays.</p>
+                    <p>Le programme d'Expédition des Cadets de l'Armée est l'activité la plus réputée où les meilleurs
+                        cadets de partout au Canada testeront et iront à la limite de leurs capacités physiques et
+                        mentales. Ces expériences de voyage permettent aux cadets de développer leur autonomie, leur
+                        leadership et leur côté aventurier autant que la signification d'être canadien.</p>
+                    <p>Les activités d'expédition permettent aux cadets de perfectionner des compétences en navigation,
+                        randonnée de haute montagne, survie en forêt et leadership. Tous les cadets doivent
+                        obligatoirement prendre part aux activités d'expédition au niveau local et de leur zone. Ils
+                        peuvent aussi décider de participer à des expéditions plus avancées à l'échelle régionale,
+                        nationale et internationale selon leurs intérêts personnels, leurs compétences et leur désir de
+                        se mesurer à eux-mêmes dans le dépassement d'un degré supérieur de difficulté.</p>
                     <p><strong>Les expéditions englobent :</strong></p>
                     <ul>
                         <li>Canoë-kayak</li>
@@ -123,38 +141,57 @@
                         <li>Descente en eau vive</li>
                         <li>Parcours d'hébertisme</li>
                     </ul>
-                    <h3><img src="/images/insignes/expédition régionale.png" alt="expédition régionale" width="96" height="88" style="vertical-align: middle;"/>Expéditions régionales</h3>
-                    <p>L'expédition durée de 4 à 10 jours. Le degré de défi de ces expéditions doit dépasser celui du niveau zone.</p>
+                    <h3><img src="/images/insignes/expédition régionale.png" alt="expédition régionale" width="96"
+                            height="88" style="vertical-align: middle;" />Expéditions régionales</h3>
+                    <p>L'expédition durée de 4 à 10 jours. Le degré de défi de ces expéditions doit dépasser celui du
+                        niveau zone.</p>
                     <p>Les critères de sélection de ces cadets sont les suivants :</p>
                     <ul>
                         <li>Ils doivent être au moins qualifiés étoile or</li>
                         <li>Ils doivent avoir au moins 15 ans</li>
                         <li>Ils doivent avoir pris part aux activités de niveau zone</li>
                         <li>Ils doivent être au moins qualifiés niveau argent au NECPC</li>
-                        <li>Ils doivent être médicalement aptes, et ne faire l'objet d'aucune restriction d'ordre médical</li>
-                        <li>La priorité est accordée aux cadets qui ont accumulé plus de points à l'ENE au niveau régional au moment de la sélection</li>
+                        <li>Ils doivent être médicalement aptes, et ne faire l'objet d'aucune restriction d'ordre
+                            médical</li>
+                        <li>La priorité est accordée aux cadets qui ont accumulé plus de points à l'ENE au niveau
+                            régional au moment de la sélection</li>
                     </ul>
-                    <h3><img src="/images/insignes/expédition nationale et internationale.png" alt="expédition nationale et internationale" width="90" height="87" style="vertical-align: middle;" />Expéditions nationales et internationales</h3>
-                    <p>Les expéditions nationales et internationales visent à perfectionner et à garder en poste les cadets seniors ainsi qu'à raffiner leur capacité de contribuer à la prestation du Programme d'expéditions.</p>
+                    <h3><img src="/images/insignes/expédition nationale et internationale.png"
+                            alt="expédition nationale et internationale" width="90" height="87"
+                            style="vertical-align: middle;" />Expéditions nationales et internationales</h3>
+                    <p>Les expéditions nationales et internationales visent à perfectionner et à garder en poste les
+                        cadets seniors ainsi qu'à raffiner leur capacité de contribuer à la prestation du Programme
+                        d'expéditions.</p>
                     <p>Les critères de sélection sont les suivants :</p>
                     <ul>
                         <li>Avoir au moins 16 ans avant l'expédition</li>
                         <li>Avoir pris part aux activités de niveau zone argent et or</li>
                         <li>S'être qualifié au niveau bronze du NECPC;</li>
                         <li>Être médicalement apte à l'activité;</li>
-                        <li>Lors de la sélection, l'URSC peut donner précédence aux cadets qui ont participé à une expédition régionale, au cours d'instructeur d'expédition et/ou au cours de leadership et challenge, ou qui présentent des expériences civiles documentées au niveau du plein-air/ expéditions</li>
-                        <li>Si un besoin existe de départager des cadets d'expériences similaires, la priorité sera accordée aux cadets qui ont accumulé plus de points à l'Etoile nationale d'excellence (ENE) au moment de la sélection</li>
-                        <li>Un cadet peut seulement participer à une expédition nationale ou internationale par année (période de douze mois consécutifs de la première expédition)</li>
+                        <li>Lors de la sélection, l'URSC peut donner précédence aux cadets qui ont participé à une
+                            expédition régionale, au cours d'instructeur d'expédition et/ou au cours de leadership et
+                            challenge, ou qui présentent des expériences civiles documentées au niveau du plein-air/
+                            expéditions</li>
+                        <li>Si un besoin existe de départager des cadets d'expériences similaires, la priorité sera
+                            accordée aux cadets qui ont accumulé plus de points à l'Etoile nationale d'excellence (ENE)
+                            au moment de la sélection</li>
+                        <li>Un cadet peut seulement participer à une expédition nationale ou internationale par année
+                            (période de douze mois consécutifs de la première expédition)</li>
                     </ul>
-                    <h3><img src="/images/fouraid.jpg" alt="fouraid" width="97" height="126" style="vertical-align: middle;" />Course d'aventure FouRaid</h3>
-                    <p>En équipe de trois, les compétiteurs doivent parcourir une distance variant entre 35 et 50 km sur une durée de 8 heures. à l'aide d'une boussole et de différents types de cartes, ils doivent localiser des points de contrôle disposés à divers endroits sur le terrain. Les disciplines principales de la course d'aventure FouRaid sont :</p>
+                    <h3><img src="/images/fouraid.jpg" alt="fouraid" width="97" height="126"
+                            style="vertical-align: middle;" />Course d'aventure FouRaid</h3>
+                    <p>En équipe de trois, les compétiteurs doivent parcourir une distance variant entre 35 et 50 km sur
+                        une durée de 8 heures. à l'aide d'une boussole et de différents types de cartes, ils doivent
+                        localiser des points de contrôle disposés à divers endroits sur le terrain. Les disciplines
+                        principales de la course d'aventure FouRaid sont :</p>
                     <ul>
                         <li>Vélo de montagne</li>
                         <li>Canot en eau calme</li>
                         <li>Trekking et course en sentiers</li>
                         <li>Rappel sur paroi rocheuse</li>
                     </ul>
-                    <p>Pour plus d'informations vous pouvez visitez <a href="http://fouraid.com/" target="_blank">http://fouraid.com/</a></p>
+                    <p>Pour plus d'informations vous pouvez visitez <a href="http://fouraid.com/"
+                            target="_blank">http://fouraid.com/</a></p>
                 </div>
             </div>
         </div>
@@ -178,25 +215,35 @@
                     <h3>Nos réseau sociaux</h3>
                     <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
                     <div>
-                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank" title="Page Facebook"><img src="images/logo_facebook.png" width="64" alt="Logo Facebook"></a>
-                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank" title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
-                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
+                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
+                            title="Page Facebook"><img src="images/logo_facebook.png" width="64"
+                                alt="Logo Facebook"></a>
+                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank"
+                            title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
+                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img
+                                src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
                     </div>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l'Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d'activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d'équipes seront testées.</p>
                 </div>
 
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer-copyright">
-                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
+                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license"
+                            href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons"
+                                style="border-width:0"
+                                src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
