--- a/inscriptions.html
+++ b/inscriptions.html
@@ -42,7 +42,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg" alt="Logo CC2972"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg"
+                        alt="Logo CC2972"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -50,7 +51,8 @@
                     <li><a href="documents/messages.pdf" target="_blank">Messages de la semaine</a></li>
                     <li class="active"><a href="inscriptions.html">Inscriptions</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="activites_optionnelles.html">Activités optionnelles</a></li>
                             <li><a href="instruction_ete.html">Instruction d'été</a></li>
@@ -60,7 +62,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="references_instructeurs.html">Instructeurs</a></li>
                             <li><a href="references_cadets.html">Cadets</a></li>
@@ -71,7 +74,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="historique.html">Notre histoire</a></li>
                             <li><a href="distinctions.html">Distinctions</a></li>
@@ -100,30 +104,38 @@
         <div class="container">
             <div class="row">
                 <p>
-                    Le mouvement des cadets vise à encourager les jeunes de 12 à 18 ans à devenir des citoyens actifs et responsables au sein de leur communauté, de développer chez eux les qualités de civisme et de leadership,
-                    de promouvoir la forme physique et de stimuler leur intérêt pour les activités des Forces canadiennes.<br>
-                    Les corps de cadets sont des organismes civils, parrainé conjointement par la Ligue des cadets de l'armée et par le ministère de la Défense nationale du Canada, et financé par ce dernier.<br>
-                    Les cadets ne s'engagent aucunement à servir comme militaires et peuvent quitter lorsqu'ils le désirent.<br>
-                    Vous pouvez vous inscrire en vous présentant en personne, accompagné d'un parent, tous les mardi soir de 18h30 à 21h (de septembre à mai).<br><br>
-                    Le Corps de cadets 2972 Mercier est situé au <a href="https://www.google.com/maps?q=720+st-jean+baptiste+mercier&hl=fr&ie=UTF8&sll=37.0625,-95.677068&sspn=35.082817,78.662109&vpsrc=0&hnear=720+Boulevard+Saint+-Jean-Baptiste,+Mercier,+Qu%C3%A9bec+J6R+1G2,+Canada&t=m&z=16" target="_blank">720 Boul. Saint-Jean Baptiste</a>.<br><br>
+                    Le mouvement des cadets vise à encourager les jeunes de 12 à 18 ans à devenir des citoyens actifs et
+                    responsables au sein de leur communauté, de développer chez eux les qualités de civisme et de
+                    leadership,
+                    de promouvoir la forme physique et de stimuler leur intérêt pour les activités des Forces
+                    canadiennes.<br>
+                    Les corps de cadets sont des organismes civils, parrainé conjointement par la Ligue des cadets de
+                    l'armée et par le ministère de la Défense nationale du Canada, et financé par ce dernier.<br>
+                    Les cadets ne s'engagent aucunement à servir comme militaires et peuvent quitter lorsqu'ils le
+                    désirent.<br>
+                    Vous pouvez vous inscrire en vous présentant en personne, accompagné d'un parent, tous les mardi
+                    soir de 18h30 à 21h (de septembre à mai).<br><br>
+                    Le Corps de cadets 2972 Mercier est situé au <a
+                        href="https://www.google.com/maps?q=720+st-jean+baptiste+mercier&hl=fr&ie=UTF8&sll=37.0625,-95.677068&sspn=35.082817,78.662109&vpsrc=0&hnear=720+Boulevard+Saint+-Jean-Baptiste,+Mercier,+Qu%C3%A9bec+J6R+1G2,+Canada&t=m&z=16"
+                        target="_blank">720 Boul. Saint-Jean Baptiste</a>.<br><br>
 
                     <span class="inscriptions">Vous devez apporter avec vous :</span>
-                    <ul>
-                        <li>une photo format portefeuille;</li>
-                        <li>acte de naissance ou passeport;</li>
-                        <li>carte d'assurance maladie.</li>
-                    </ul>
-                    <span class="inscriptions">Qui peut s'inscrire?</span>
-                    <ul>
-                        <li>Garçons et filles de 12 à 18 ans;</li>
-                        <li>Intéressé par le programme des cadets;</li>
-                        <li>Permission des parents/tuteur légal.</li>
-                    </ul>
-                    <span class="inscriptions">Combien ça coûte?</span>
-                    <ul>
-                        <li>Aucuns frais d'inscription;</li>
-                        <li>L'uniforme est fourni gratuitement.</li>
-                    </ul>
+                <ul>
+                    <li>une photo format portefeuille;</li>
+                    <li>acte de naissance ou passeport;</li>
+                    <li>carte d'assurance maladie.</li>
+                </ul>
+                <span class="inscriptions">Qui peut s'inscrire?</span>
+                <ul>
+                    <li>Garçons et filles de 12 à 18 ans;</li>
+                    <li>Intéressé par le programme des cadets;</li>
+                    <li>Permission des parents/tuteur légal.</li>
+                </ul>
+                <span class="inscriptions">Combien ça coûte?</span>
+                <ul>
+                    <li>Aucuns frais d'inscription;</li>
+                    <li>L'uniforme est fourni gratuitement.</li>
+                </ul>
                 </p>
             </div>
         </div>
@@ -135,8 +147,10 @@
         <div class="container">
             <div class="row">
                 <h2>Uniforme</h2>
-                <p class="lead">Le cadet recevra son uniforme une fois que son dossier est complet et qu'il démontre un intérêt à continuer son apprentissage au sein du corps de cadet (environ 5 à 6 semaines).</p>
-                <p class="lead">Prenez note que l'uniforme est prêté par le corps de cadets. Il doit être retourné lorsque le cadet quitte le programme des cadets.</p>
+                <p class="lead">Le cadet recevra son uniforme une fois que son dossier est complet et qu'il démontre un
+                    intérêt à continuer son apprentissage au sein du corps de cadet (environ 5 à 6 semaines).</p>
+                <p class="lead">Prenez note que l'uniforme est prêté par le corps de cadets. Il doit être retourné
+                    lorsque le cadet quitte le programme des cadets.</p>
             </div>
         </div>
     </div>
@@ -147,7 +161,8 @@
         <div class="container">
             <div class="row">
                 <h2>Informations</h2>
-                <p class="lead">Pour plus d'information, contactez-nous via le <a href="contact.html">formulaire de contact</a> ou au 450-692-2972.</p>
+                <p class="lead">Pour plus d'information, contactez-nous via le <a href="contact.html">formulaire de
+                        contact</a> ou au 450-692-2972.</p>
             </div>
         </div>
     </div>
@@ -170,25 +185,35 @@
                     <h3>Nos réseau sociaux</h3>
                     <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
                     <div>
-                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank" title="Page Facebook"><img src="images/logo_facebook.png" width="64" alt="Logo Facebook"></a>
-                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank" title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
-                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
+                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
+                            title="Page Facebook"><img src="images/logo_facebook.png" width="64"
+                                alt="Logo Facebook"></a>
+                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank"
+                            title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
+                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img
+                                src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
                     </div>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d’équipes seront testées.</p>
                 </div>
 
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer-copyright">
-                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
+                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license"
+                            href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons"
+                                style="border-width:0"
+                                src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
