--- a/recompenses.html
+++ b/recompenses.html
@@ -119,7 +119,7 @@
                     <h3>Cadets du mois</h3>
                     <p>Les cadets du mois sont évalués par niveau selon les critères suivant :</p>
                     <ul>
-                        <li>Taux de présence lors des soirées d’instructions</li>
+                        <li>Taux de présence lors des soirées d'instructions</li>
                         <li>Taux de présence lors des activités complémentaires et optionnelles</li>
                         <li>Participation aux activités</li>
                         <li>Amélioration</li>
@@ -131,10 +131,10 @@
                     <h3>Peloton du mois</h3>
                     <p>Les pelotons sont évalués selon les critères suivant :</p>
                     <ul>
-                        <li>Moyenne des présences du peloton lors des soirées d’instructions</li>
+                        <li>Moyenne des présences du peloton lors des soirées d'instructions</li>
                         <li>Moyenne des présences du peloton lors des activités complémentaires et optionnelles</li>
                         <li>Moyenne des inspections du peloton</li>
-                        <li>Évaluation de l’exercice militaire selon le SMC</li>
+                        <li>Évaluation de l'exercice militaire selon le SMC</li>
                         <li>Point boni selon diverse activité lors du mois</li>
                         <li>Action positive/négative</li>
                         <li>Matériel remis en retard administration/quartier-maître</li>
@@ -173,9 +173,9 @@
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et
-                        d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
-                        d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l'Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d'activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d'équipes seront testées.</p>
                 </div>
 
             </div>
